--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
   <!-- Banner promocional -->
   <app-root></app-root>
   <div class="image">
-    <h2 style="height: 7rem; margin-left: 10rem; padding-top: 50px;">Promociones de día</h2>
+    <h2 style="height: 7rem; margin-left: 10rem; padding-top: 50px;">Promocsiones de día</h2>
     <p style="height: 7rem; margin-left: 10rem; ">Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br> Quisque sit amet laoreet leo, at scelerisque dolor. Vivamus nec nulla sed arcu feugiat aliquam. </p>
   </div>
 
