--- a/src/index.html
+++ b/src/index.html
@@ -1,68 +1,31 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>TecSells</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="styles.scss">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-</head>
-<header>
+<!-- Contenido tablas -->
 
-  <!-- Menú -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: #FFE800!important; height: 8rem;" >
-    <a  class="navbar-brand" href="#" style="width: 30%; margin: 0 -8rem 0 59px;"><img src="./assets/exito.png" alt="" style="width: 25%;"></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <form class="form-inline my-2 my-lg-0 search">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0 search-boton" type="submit">Search</button>
-    </form>
-    <div class="collapse navbar-collapse menu" id="navbarSupportedContent">
-      <li class="nav-item mapa">
-
-        <img src="./assets/mapa.png" alt="mapa" style="height: 24px; margin-top: 12px;">
-        <a class="nav-link" href="#"> ¿Cómo quieres <br> recibir tu pedido?<span class="sr-only"></span></a>
-      </li>
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="#"><img src="./assets/user.png" alt="Cuenta" style="margin-left: 30px; width: 24px"> Mi cuenta</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#"><img src="./assets/carrito.png" alt="Carrito" style="margin-left: 13px; width: 24px"> Carrito</a>
-        </li>
-        </li>
-      </ul>
+<app-root></app-root>
+<div class="container text-center">
+  <div class="row align-items-start">
+    <div class="col">
+      <img src="./assets/1068210-800-600.jpg" alt="Iphone" style="width: 100%;">
+     <p class="texto">Apple</p>
+     <p class="titulo-producto"> iPhone 11 128 GB 4GB RAM | Pantalla 6.1 Pulgadas | Chip A13 Bionic | Camara 12 MP</p>
+     <p class="texto"> Por Alkosto</p>
+     <p class="precio-1"> 2.549.900  </p>
+     <p class="precio-2"> 2.130.900 ¡Descuento! </p>
     </div>
-  </nav>
-</header>
-<body>
-
-  <!-- Banner promocional -->
-  <app-root></app-root>
-  <div class="image">
-    <h2 style="height: 7rem; margin-left: 10rem; padding-top: 50px;">Promocsiones de día</h2>
-    <p style="height: 7rem; margin-left: 10rem; ">Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br> Quisque sit amet laoreet leo, at scelerisque dolor. Vivamus nec nulla sed arcu feugiat aliquam. </p>
-  </div>
-
-  <!-- Contenido tablas -->
-  <div class="container text-center">
-    <div class="row align-items-start">
-      <div class="col">
-        <img src="" alt="">
-       <p class="texto"> iPhone 11 128 GB 4GB RAM | Pantalla 6.1 Pulgadas | Chip A13 Bionic | Camara 12 MP</p>
-      </div>
-      <div class="col">
-        One of three columns
-      </div>
-      <div class="col">
-        One of three columns
-      </div>
+    <div class="col">
+      <img src="./assets/69514525_1.avif" alt="Huawei" style="width: 75%;">
+     <p class="texto">Huawei</p>
+     <p class="titulo-producto"> Celular Huawei Y91 256GB</p>
+     <p class="texto"> Por Falabella</p>
+     <p class="precio-1"> 1.599.900  </p>
+     <p class="precio-2"> 999.900 ¡Descuento! </p>
+    </div>
+    <div class="col">
+      <img src="./assets/gsc_126983677_4763559_1.jpg" alt="Realme" style="width: 75%;">
+     <p class="texto">Realme</p>
+     <p class="titulo-producto"> Celular Realme C53 128gb 6gb Ram Dual Sim Dorado</p>
+     <p class="texto"> Por Ktronix</p>
+     <p class="precio-1"> 569.900  </p>
+     <p class="precio-2"> 549.900 ¡Descuento! </p>
     </div>
   </div>
-</body>
-</html>
+</div>
