Creación dé rutas

--- a/src/index.html
+++ b/src/index.html
@@ -1,31 +1,13 @@
-<!-- Contenido tablas -->
-
-<app-root></app-root>
-<div class="container text-center">
-  <div class="row align-items-start">
-    <div class="col">
-      <img src="./assets/1068210-800-600.jpg" alt="Iphone" style="width: 100%;">
-     <p class="texto">Apple</p>
-     <p class="titulo-producto"> iPhone 11 128 GB 4GB RAM | Pantalla 6.1 Pulgadas | Chip A13 Bionic | Camara 12 MP</p>
-     <p class="texto"> Por Alkosto</p>
-     <p class="precio-1"> 2.549.900  </p>
-     <p class="precio-2"> 2.130.900 ¡Descuento! </p>
-    </div>
-    <div class="col">
-      <img src="./assets/69514525_1.avif" alt="Huawei" style="width: 75%;">
-     <p class="texto">Huawei</p>
-     <p class="titulo-producto"> Celular Huawei Y91 256GB</p>
-     <p class="texto"> Por Falabella</p>
-     <p class="precio-1"> 1.599.900  </p>
-     <p class="precio-2"> 999.900 ¡Descuento! </p>
-    </div>
-    <div class="col">
-      <img src="./assets/gsc_126983677_4763559_1.jpg" alt="Realme" style="width: 75%;">
-     <p class="texto">Realme</p>
-     <p class="titulo-producto"> Celular Realme C53 128gb 6gb Ram Dual Sim Dorado</p>
-     <p class="texto"> Por Ktronix</p>
-     <p class="precio-1"> 569.900  </p>
-     <p class="precio-2"> 549.900 ¡Descuento! </p>
-    </div>
-  </div>
-</div>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>PruebaAngular</title>
+  <base href="/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+</head>
+<body>
+  <app-root></app-root>
+</body>
+</html>
